# Fujinami

./: .gitignore  Dockerfile  README.md  api.py  auth_utils.py  document_loader.py  indexer.py  models.py  pyproject.toml  ragService.py  rag_service.py  ragas_runner.py  requirements-eval.txt  requirements.txt  reranker.py  retriever.py  rewriter.py  self_reflector.py  test_docling_serve.py
.github/prompts/: dataflow-ragService.md  plan-addImageUploadToQueryPage.prompt.md  plan-doclingMigration.prompt.md  plan-fastApiRagServer.prompt.md  plan-graphEngineRewrite.prompt.md  plan-incrementalRagIndexing.prompt.md  plan-indexerRewrite.prompt.md  plan-localReranker.prompt.md  plan-massiveTableEntityProfiles.prompt.md  plan-multiCollectionRagService.prompt.md  plan-queryRewritingHyDE.prompt.md  plan-ragService.prompt.md  plan-ragasEvaluation.prompt.md  plan-removeRagas.prompt.md  plan-replaceDoclingWithDoclingServe.prompt.md  plan-selfRag.prompt.md  plan-updateDocumentLoaderRefactorRagService.prompt.md
.github/reference/: IncrementalRAGIndexing.md  massiveTable.md  ragStructure.md
data/: .gitkeep
deployment/: docker-compose.yml  nginx.conf
docs/: dataflow-document_loader.md  dataflow-ragService.md  dataflow-rewriter.md  dataflow-selfReflector.md  rag-architecture.md
graph_engine/: __init__.py  base.py  chunker.py  deduplicator.py  models.py  pipeline.py  query_graph.py  state.py  store.py
graph_engine/extractors/: hybrid_extractor.py  llm_extractor.py  spacy_extractor.py
graph_engine/tests/: test-log.md  test_chunker.py  test_deduplicator.py  test_extractors.py  test_models.py  test_pipeline.py  test_store.py  test_types.py
indexer/: __init__.py  delta.py  embedder.py  graph.py  pipeline.py  store.py
python/: api.py  document_loader.py  install_dependency.py  models.py  ollamaAgent.py  ollamaService.py  pyproject.toml  ragService.py  run_calculator.py  test_config.py  test_find.py  test_graphrag_input.py  test_rag.py
python/mcps/: calculator.py
python/ragdata/: settings.yaml
python/static/: index.html
ragdata/: settings.yaml
static/: index.html
tests/: conftest.py  ragas_helpers.py  test_docling_serve.py  test_document_loader_massive_table.py  test_document_loader_table_chunking.py  test_document_loader_vlm_fallback.py  test_ragas_eval.py  test_reranker.py  test_vlm_ollama_smoke.py
tests/fixtures/: docling_smoke_test.json  docling_smoke_test.md
