[project]
name = "fujinami"
version = "0.1.0"
description = "RAG service with Ollama and GraphRAG"
requires-python = ">=3.12"
dependencies = [
    "agent-framework",
    "semantic-kernel[ollama]",
    "graphrag",
    "lancedb",
    "pyarrow",
    "pypdf",
    "pymupdf",
    "python-docx",
    "pywin32",
    "poethepoet",
    "ragas>=0.2",
    "litellm",
    "openai",
    "docling[asr]",
    "transformers>=4.0,<5",
]

[tool.uv]
package = false
prerelease = "allow"
link-mode = "copy"

[tool.poe.tasks]
install = "uv pip install -r requirements.txt"
dev = "uvicorn api:app --reload"
