[project]
name = "fujinami"
version = "0.1.0"
description = "RAG service with Ollama and graph_engine"
requires-python = ">=3.12"
dependencies = [
    "agent-framework",
    "semantic-kernel[ollama]",
    "lancedb",
    "pyarrow",
    "pypdf",
    "pymupdf",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "pywin32",
    "poethepoet",
    "litellm",
    "openai",
    "docling[asr]",
    "transformers>=4.0,<5",
    "spacy",
    "langdetect",
    "langchain-text-splitters",
    "langchain-core",
    "langchain-ollama",
    "ollama>=0.6.0",
    "sentence-transformers",
]

[tool.uv]
package = false
prerelease = "allow"
link-mode = "copy"

[tool.poe.tasks]
install = "uv pip install -r requirements.txt"
dev = "uvicorn api:app --reload"
eval-install = "uv pip install -r requirements-eval.txt"
eval = "pytest tests/test_ragas_eval.py -v -s"
